Added support for plugin versions.

--- a/projects/vs2013/plugin.contract.vcxproj.vcxproj.filters
+++ b/projects/vs2013/plugin.contract.vcxproj.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="..\..\plugin.contract\plugin\IServiceReference.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\plugin.contract\plugin\IVersion.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
