--- a/projects/vs2013/plugin.core.vcxproj
+++ b/projects/vs2013/plugin.core.vcxproj
@@ -54,7 +54,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../../3rdparty/tinyxml2/include;../../plugin.contract</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../plugin.contract</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -72,7 +72,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../../3rdparty/tinyxml2/include;../../plugin.contract</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../plugin.contract</AdditionalIncludeDirectories>
       <StringPooling>true</StringPooling>
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
@@ -94,14 +94,12 @@
     <ClCompile Include="..\..\plugin.core\plugin\core\PluginContext.cpp" />
     <ClCompile Include="..\..\plugin.core\plugin\core\ServiceReference.cpp" />
     <ClCompile Include="..\..\plugin.core\plugin\core\Version.cpp" />
-    <ClCompile Include="..\..\plugin.core\plugin\core\XMLPluginContext.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\plugin.core\plugin\core\Plugin.h" />
     <ClInclude Include="..\..\plugin.core\plugin\core\PluginContext.h" />
     <ClInclude Include="..\..\plugin.core\plugin\core\ServiceReference.h" />
     <ClInclude Include="..\..\plugin.core\plugin\core\Version.h" />
-    <ClInclude Include="..\..\plugin.core\plugin\core\XMLPluginContext.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="plugin.contract.vcxproj.vcxproj">
