--- a/projects/vs2013/plugin.contract.vcxproj.vcxproj.filters
+++ b/projects/vs2013/plugin.contract.vcxproj.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="..\..\plugin.contract\plugin\IServiceReferences.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\plugin.contract\plugin\IPluginListener.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
