--- a/projects/vs2013/plugin.contract.vcxproj.vcxproj.filters
+++ b/projects/vs2013/plugin.contract.vcxproj.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="..\..\plugin.contract\plugin\IVersion.h">
       <Filter>Contract</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\plugin.contract\plugin\IContract.h">
+      <Filter>Contract</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
