--- a/demo/gameengine/gameengine.vcxproj
+++ b/demo/gameengine/gameengine.vcxproj
@@ -57,8 +57,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>plugin.contract.lib;plugin.core.lib;plugin.core.xml.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>../../projects/vs2013/Debug/plugin.contract;../../projects/vs2013/Debug/plugin.core;../../projects/vs2013/Debug/plugin.core.xml</AdditionalLibraryDirectories>
+      <AdditionalDependencies>plugin.core.lib;plugin.core.xml.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>../../projects/vs2013/Debug/plugin.core;../../projects/vs2013/Debug/plugin.core.xml</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -77,8 +77,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>plugin.contract.lib;plugin.core.lib;plugin.core.xml.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>../../projects/vs2013/Release/plugin.contract;../../projects/vs2013/Release/plugin.core;../../projects/vs2013/Release/plugin.core.xml</AdditionalLibraryDirectories>
+      <AdditionalDependencies>plugin.core.lib;plugin.core.xml.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>../../projects/vs2013/Release/plugin.core;../../projects/vs2013/Release/plugin.core.xml</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
