Major redesign of how the engine works. All interface have a version included in their names.

--- a/demo/gameengine.contract/gameengine.contract.vcxproj
+++ b/demo/gameengine.contract/gameengine.contract.vcxproj
@@ -79,7 +79,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="contract.h" />
-    <ClInclude Include="IGame.h" />
+    <ClInclude Include="game.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="contract.cpp" />
