--- a/projects/vs2013/plugin.contract.vcxproj.vcxproj
+++ b/projects/vs2013/plugin.contract.vcxproj.vcxproj
@@ -11,21 +11,17 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\plugin.contract\plugin\contract.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="..\..\plugin.contract\plugin\contract.h" />
     <ClInclude Include="..\..\plugin.contract\plugin\defines.h" />
-    <ClInclude Include="..\..\plugin.contract\plugin\IContract.h" />
-    <ClInclude Include="..\..\plugin.contract\plugin\IPlugin.h" />
-    <ClInclude Include="..\..\plugin.contract\plugin\IPluginActivator.h" />
-    <ClInclude Include="..\..\plugin.contract\plugin\IPluginContext.h" />
-    <ClInclude Include="..\..\plugin.contract\plugin\IPluginListener.h" />
-    <ClInclude Include="..\..\plugin.contract\plugin\IServiceReferences.h" />
-    <ClInclude Include="..\..\plugin.contract\plugin\IVersion.h" />
-    <ClInclude Include="..\..\plugin.contract\plugin\IService.h" />
-    <ClInclude Include="..\..\plugin.contract\plugin\IServiceListener.h" />
-    <ClInclude Include="..\..\plugin.contract\plugin\IServiceReference.h" />
+    <ClInclude Include="..\..\plugin.contract\plugin\pluginbundle1.h" />
+    <ClInclude Include="..\..\plugin.contract\plugin\pluginactivator1.h" />
+    <ClInclude Include="..\..\plugin.contract\plugin\plugincontext1.h" />
+    <ClInclude Include="..\..\plugin.contract\plugin\pluginbundlelistener1.h" />
+    <ClInclude Include="..\..\plugin.contract\plugin\pluginservicereferences1.h" />
+    <ClInclude Include="..\..\plugin.contract\plugin\pluginversion1.h" />
+    <ClInclude Include="..\..\plugin.contract\plugin\pluginservice1.h" />
+    <ClInclude Include="..\..\plugin.contract\plugin\pluginservicelistener1.h" />
+    <ClInclude Include="..\..\plugin.contract\plugin\pluginservicereference1.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6A708F37-BD90-482C-92CD-0CCCA385112A}</ProjectGuid>
