--- a/demo/customcomponent1/customcomponent1.vcxproj.filters
+++ b/demo/customcomponent1/customcomponent1.vcxproj.filters
@@ -5,23 +5,21 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Contract">
-      <UniqueIdentifier>{e6b290d4-8b80-4bf3-92a8-24f5d4b298f4}</UniqueIdentifier>
+    <Filter Include="Resource Files">
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="contract.h">
+    <ClInclude Include="CustomComponent1.h">
       <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="game.h">
-      <Filter>Contract</Filter>
-    </ClInclude>
-    <ClInclude Include="component.h">
-      <Filter>Contract</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="contract.cpp">
+    <ClCompile Include="CustomComponent1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CustomComponent1Activator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
